Added properties to Product and changed some things accordingly